fix padding on mobile and update net func to midnight run

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@ h1 {
   line-height: 1.1;
 }
 
+ul {
+  padding: 0;
+}
+
 li {
   list-style-type: none;
   margin: 1rem 0 2rem 0;
